--- a/style.css
+++ b/style.css
@@ -6,10 +6,31 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    background-color: #F3F1FF;
+}
+
+main {
+    display: flex;
+}
+
+.container {
+    background-color: #FFFFFF;
+    width: 870px;
+    height: 679px;
+    padding: 30px;
 }
 
 
 /* Top Players Styles */
+
+.top-players {}
+
+.text-layout {
+    color: #562EFF;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+}
 
 .players {
     display: grid;
@@ -25,4 +46,8 @@ body {
 .player img {
     height: 56px;
     width: 56px;
+}
+
+.player-name {
+    margin-left: 16px;
 }
