--- a/style.css
+++ b/style.css
@@ -11,31 +11,39 @@ body {
 
 main {
     display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .container {
     background-color: #FFFFFF;
     width: 870px;
-    height: 679px;
+    height: 665px;
     padding: 30px;
+    border-radius: 5px;
+    margin-top: 21px;
 }
 
 
 /* Top Players Styles */
 
-.top-players {}
+.top-players {
+    margin-bottom: 30px;
+}
 
 .text-layout {
     color: #562EFF;
     font-weight: 500;
     font-size: 24px;
-    line-height: 36px;
+    line-height: 30px;
+    margin-top: 3px;
 }
 
 .players {
     display: grid;
     /* grid-template-columns: 1fr 1fr 1fr; */
     grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
 }
 
 .player {
@@ -50,4 +58,158 @@ main {
 
 .player-name {
     margin-left: 16px;
+    font-size: 18px;
+}
+
+hr {
+    border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
+}
+
+
+/* Top Blogs Styles */
+
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 25px;
+}
+
+.blog {
+    display: flex;
+}
+
+.blog .thumbnail img {
+    width: 177px;
+    height: 117px;
+}
+
+.blog-info {
+    margin-left: 16px;
+}
+
+.blog-title {
+    font-size: 20px;
+}
+
+.author {
+    color: #9F9F9F;
+    font-size: 16px;
+}
+
+.author a {
+    text-decoration: none;
+    font-size: 16px;
+    font-size: 16px;
+    color: #562EFF;
+}
+
+
+/* Courses Styles */
+
+.containe {
+    background-color: #FFFFFF;
+    width: 870px;
+    height: 385px;
+    padding: 30px;
+    border-radius: 5px;
+    margin-top: 21px;
+}
+
+.courses {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+
+.course {
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px rgb(248, 236, 236);
+    padding: 20px;
+}
+
+.course .course-banner img {
+    width: 230px;
+    height: 115px;
+    margin-bottom: 7px;
+}
+
+.course-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.desc-layout {
+    font-weight: 500;
+    font-size: 21px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.course-details .author {
+    color: #ED6B4F;
+    margin-top: 7px;
+}
+
+.fa-star {
+    font-size: 12px;
+}
+
+.fa-star.filled {
+    color: #FFC014;
+}
+
+.fa-star.empty {
+    color: #AEAEAE;
+}
+
+.course-duration {
+    background-color: #FFE4E8;
+    border-radius: 13px;
+    color: #FF4A60;
+}
+
+.course-duration .fa-clock {
+    margin-right: 5px;
+    height: 20px;
+}
+
+
+/* -------------------------
+      Mobilr devices
+------------------------- */
+
+@media only screen and (max-width:688px) {
+    .container,
+    .containe {
+        width: 100%;
+    }
+    .players,
+    .blogs,
+    .courses {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player {
+        flex-direction: column;
+    }
+}
+
+
+/* -------------------------
+     Tablet devices
+------------------------- */
+
+@media only screen and (min-width: 688px) and (max-width:992px) {
+    .container {
+        width: 100%;
+    }
+    .players,
+    .courses {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .blogs {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
